--- a/chapter5.tex
+++ b/chapter5.tex
@@ -87,7 +87,7 @@
     若$f(x)$在$I$上连续, 除了有限个点$x_1, x_2, \cdots, x_n$之外, $f'(x)>0$, 则$f'(x)$在I上严格单调增加。
 \end{remark}
 
-\section{函数的凸性}
+\subsection{函数的凸性}
 convex(凸), convave(凹), 陈老版本将前者定义为下凸, 后者定义为上凸。
 
 几何上, 下凸: 弦在曲线上方; 上凸: 弦在曲线上方。
@@ -108,7 +108,7 @@ convex(凸), convave(凹), 陈老版本将前者定义为下凸, 后者定义为
 \end{proof}
 
 % 陈老视频52(2023.01.13)
-\section{拐点}
+\subsection{拐点}
 (拐点会使得作图像样)
 \begin{theorem}
     $f(x)$在区间$I$上连续, $(x_0-\delta, x_0+\delta) \subset I$:
@@ -225,6 +225,76 @@ convex(凸), convave(凹), 陈老版本将前者定义为下凸, 后者定义为
 
 \begin{example}
     设$f(x)$在$[1, +\infty)$连续, 在$(1, +\infty)$可导, $\e^{-x^2}f'(x)$在$(1, +\infty)$上有界,则$x\e^{-x^2}f(x)$也在$(1, +\infty)$上有界。
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+% 陈老视频54(2023.01.16)
+\section{L'Hospital法则}
+L'Hospital是求待定型的一种重要方法(有的书翻译成洛必达, 有的书翻译成罗比塔)。
+\begin{theorem}[L'Hospital法则]~\label{theorem:L'Hospital-law}
+    $f(x)$, $g(x)$在$(a, a+d]$上可导, $g'(x) \neq 0$, 若这时有:
+    \begin{equation*}
+        \funclim{x}{a^+}{f(x)} = \funclim{x}{a^+}{g(x)} = 0
+    \end{equation*}
+    或者:
+    \begin{equation*}
+        \funclim{x}{a^+}{g(x)} = \infty(\text{没要求}\funclim{x}{a^+}{f(x)} = \infty)
+    \end{equation*}
+    且$\funclim{x}{a^+}{\frac{f'(x)}{g'(x)}} = A(\text{或}\infty)$, 则:
+    \begin{equation*}
+        \funclim{x}{a^+}{\frac{f(x)}{g(x)}} = \funclim{x}{a^+}{\frac{f'(x)}{g'(x)}}
+    \end{equation*}
+\end{theorem}
+\begin{remark}
+    \begin{enumerate}
+        \item $x \to a^+$也适用于$x \to x_0, x \to x_0^-, x \to \pm \infty, x \to \infty $。
+        \item $\funclim{x}{a^+}{\frac{f'(x)}{g'(x)}}$, 也适用于$\frac{f'(x)}{g'(x)} \to \infty, +\infty, -\infty$。
+        \item $\funclim{x}{a^+}{\frac{f(x)}{g(x)}}$, 是$\frac{0}{0}$型或者$\frac{*}{\infty}$型。
+    \end{enumerate}
+\end{remark}
+\begin{proof}
+    情况一:
+
+    情况二:
+\end{proof}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \funclim{x}{0}{\frac{1-\cos(2x)}{x^2}}
+    \end{equation*}
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \funclim{x}{\infty}{\frac{\frac{\pi}{2}-\arctan(x)}{\sin{\frac{1}{x}}}}
+    \end{equation*}
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \funclim{x}{0}{\frac{x-\tan(x)}{x^3}}
+    \end{equation*}
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        \funclim{x}{+\infty}{\frac{x^a}{\e^{bx}}} \quad (a > 0, b > 0)
+    \end{equation*}
 \end{example}
 \begin{proof}
     
