update chapter2, chapter5

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -659,6 +659,9 @@ $\sqrt{2}$不是有理数。
 
     \qed
 \end{proof}
+\begin{remark}
+    注意分类讨论$a = 0$的情况。
+\end{remark}
 
 \begin{proposition}
     若$\{ x_n \}$是无穷小量，$\{ y_n \}$有界($| y_n | \le X$)，则$\{ x_n y_n \}$也是无穷小量。
@@ -709,13 +712,46 @@ $\sqrt{2}$不是有理数。
     \qed
 \end{proof}
 
-\begin{proposition}
-    证明$\{ \frac{n^2-1}{n+5} \}$是无穷大量。 
-\end{proposition}
+\begin{example}
+    证明$\collect{\frac{n^2-1}{n+5}}$是无穷大量。 
+\end{example}
 \begin{proof}
-    
-\end{proof}
+    令:
+    \begin{equation*}
+        \frac{n^2-1}{n+5} > \frac{n^2-25}{n+5} = n-5 > G 
+    \end{equation*}
+    则可取$N = G + 5$, 当$n > N$时, 有:
+    \begin{equation*}
+        \left| \frac{n^2-1}{n+5} \right| > \frac{n^2-1}{n+5} > G
+    \end{equation*}
+    则$\collect{\frac{n^2-1}{n+5}}$是无穷大量。
 
+    \qed
+
+    \framebox{陈老证明:}
+    要证明该数列, 我们可以将分子分母进行缩放。我们希望将分子缩放成$n^2$, 分母缩放成$n$, 这是做不到的, 但是我们可以将分母缩放成$2n$。
+    此时, 令:
+    \begin{equation*}
+        \frac{n^2-1}{n+5} > \frac{n^2}{2n} = \frac{n}{2}
+    \end{equation*}
+    则我们可以通过解方程:
+    \begin{equation*}
+        2n^2-2 > n^2 + 5n
+    \end{equation*}
+    得只要$n > 5$时, 不等式就能成立。因此我们可以取$N = \max\{2G, 5\}$, 当$n > N$时候:
+    \begin{equation*}
+        \frac{n^2-1}{n+5} > \frac{n}{2} > G
+    \end{equation*}
+    则$\collect{\frac{n^2-1}{n+5}}$是无穷大量。
+
+    \qed
+
+\end{proof}
+\begin{remark}
+    对于分母是$n-c$($c$为常数)的情况, 我们可以令$n > 2c$, 此时$n - c > \frac{n}{2}$, 而对于分母是$n+c$的情况, 我们可以令$n > c$, 此时$n + c < 2n$
+\end{remark}
+
+下面我们再来讨论下无穷大量和无穷小量之间的关系。
 \begin{lemma}\label{lemma:inverse}
     若$x_n \neq 0$，则$\{ x_n \}$是无穷大量的充要条件是$\{ \frac{1}{x_n} \}$是无穷小量。    
 \end{lemma}
