update chapter1, chapter5

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -45,7 +45,7 @@ $\sqrt{2}$不是有理数。
         \end{aligned}
     \right.
 \end{equation*}
-
+可以看到当$x$属于有理数域时, $D(x)$是一个恒等于1的常数函数, 而如果$x$属于实数域时, $D(x)$则并不是一个常数函数。
 % 陈老视频8
 \begin{theorem}[确界存在定理---实数系连续性定理]
     非空有上界的数集必有上确界，非空有下界的数集必有下确界。
