--- a/chapter5.tex
+++ b/chapter5.tex
@@ -802,3 +802,70 @@ $x \to +\infty$, $y = ax + b$是函数$f(x)$的图像的渐近线的充分必要
 \begin{proof}
     \framebox{反证法}:
 \end{proof}
+
+% 陈老视频62(2023.01.25)
+\section{应用举例}
+\subsection{极值问题}
+已知函数$y = f(x)$, 现在我们要讨论它的极大值和极小值, 假设$x = x_0$是极值点, 则$f'(x_0) = 0$, 或$f'(x_0)$不存在。
+
+\begin{theorem}[极值点的判定定理]
+    设$f(x)$在$x_0$的某一个领域中有定义, 且$f(x)$在$x_0$连续。
+    \begin{enumerate}
+        \item 设$\exists \delta > 0$, $f(x)$在$(x_0-\delta, x_0)$, $(x_0, x_0+\delta)$上可导
+        \begin{enumerate}[(a)]
+            \item 在$(x_0-\delta, x_0)$, $f'(x) \ge 0$; 在$(x_0, x_0+\delta)$, $f'(x) \le 0$, 则$x_0$是极大值点, $f(x_0)$是一个极大值。
+            \item 在$(x_0-\delta, x_0)$, $f'(x) \le 0$; 在$(x_0, x_0+\delta)$, $f'(x) \ge 0$, 则$x_0$是极小值点, $f(x_0)$是一个极小值。
+            \item $f'(x_0)$在$(x_0-\delta, x_0)$与$(x_0, x_0+\delta)$上同号, 则$x_0$不是极值点。
+        \end{enumerate}
+        \item 设$f'(x_0) = 0$, $f(x)$在$x_0$二阶可导。
+        \begin{enumerate}[(a)]
+            \item $f''(x_0) < 0$, 则$x_0$是极大值点。
+            \item $f''(x_0) > 0$, 则$x_0$是极小值点。
+            \item $f''(x_0) = 0$, 则无法判断。
+        \end{enumerate}
+    \end{enumerate}
+\end{theorem}
+\begin{proof}
+    \framebox{证明情况1}:
+
+    \framebox{证明情况2}:\wyc{泰勒公式}
+\end{proof}
+\begin{remark}
+    
+\end{remark}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        f(x) = \sqrt[3]{(2x-x^2)^2}
+    \end{equation*}
+    的极值点。
+\end{example}
+\begin{proof}
+    
+\end{proof}
+
+\begin{example}
+    求:
+    \begin{equation*}
+        f(x) = (x^3-1)^3+1
+    \end{equation*}
+    的极值点。
+\end{example}
+\begin{solution}
+    
+\end{solution}
+
+\subsection{最值问题}
+$y = f(x)$在$[a, b]$上连续, 则$f(x)$在$[a, b]$上能取到最大最小值。若最值点在$(a, b)$上,则它必是极值点。那么或者$f'(x_0) = 0$或者$f'(x_0)$不存在。所以求解最值问题先求解$(a, b)$上的极值问题, 求出极值可能点, 然后再加上$x = a$和$x = b$, 比较在这些点的函数值。
+
+\begin{example}
+    求:
+    \begin{equation*}
+        f(x) = \sqrt[3]{(2x-x^2)^2}
+    \end{equation*}
+    在$[-1, 4]$上的最大值、最小值。
+\end{example}
+\begin{solution}
+    
+\end{solution}
