--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{etoolbox}
 \usepackage{xcolor}
+\usepackage{enumerate}
 \input{newcommand}
 \graphicspath{{picture/}{figure/}}
 
